javali_tests/A3/A4_keinestamSchmid/success/Positive.2.3.16.ARRAYLENGTH.javali
//Pos 2.3.16
//ArrayLength must be of integer type

class Main{
	int[] array;
	void main(){
		array = new int[100];
	}
}