javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.15.ARRAYDEREFERENCE.javali
//The index to an array dereference (x[i]) must be of integer type, and the array must be of array type.
//The resulting type is the element type of the array. (TYPE ERROR)
// rule 2.3.15

class Main {
int y;
	void main() {
		int[] x;
		x = new int[10];
		y = x[3.1];
	}
}
